--- a/apis/src/RoboticistsApis.Apis/RoboticistsApis.Apis.csproj
+++ b/apis/src/RoboticistsApis.Apis/RoboticistsApis.Apis.csproj
@@ -13,8 +13,23 @@
     <PackageReference Include="Amazon.Lambda.Core" Version="1.2.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.1.0" />
     <PackageReference Include="Amazon.Lambda.TestUtilities" Version="1.2.0" />
-    <PackageReference Include="AWSSDK.Core" Version="3.5.3.8" />
+    <PackageReference Include="AWSSDK.Core" Version="3.7.0.14" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RoboticistsApis.Infrastructure\RoboticistsApis.Infrastructure.csproj" />
+    <ProjectReference Include="..\RoboticistsApis.Models\RoboticistsApis.Models.csproj" />
+    <ProjectReference Include="..\RoboticistsApis.Services\RoboticistsApis.Services.csproj" />
   </ItemGroup>
 
 </Project>
