--- a/apis/src/RoboticistsApis.Apis/serverless.yml
+++ b/apis/src/RoboticistsApis.Apis/serverless.yml
@@ -80,7 +80,16 @@ functions:
           path: posts
           method: post
           cors: true
-
+  
+  listCategoryPosts:
+    handler: RoboticistsApis.Apis::RoboticistsApis.Apis.Controllers.PostsController::List
+    package:
+      artifact: bin/Release/netcoreapp3.1/package.zip
+    events:
+        - http:
+            path: categoryposts/{category}
+            method: get
+          
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
