latest code updated

--- a/apis/src/RoboticistsApis.Apis/serverless.yml
+++ b/apis/src/RoboticistsApis.Apis/serverless.yml
@@ -142,6 +142,54 @@ functions:
 
 resources:
   Resources:
+    blogUsersPool:
+      Type: AWS::Cognito::UserPool
+      Properties:
+        MfaConfiguration: OFF
+        UserPoolName: BlogUsers
+        UsernameAttributes:
+          - email
+        AutoVerifiedAttributes:
+          - email
+        Policies:
+          PasswordPolicy:
+            MinimumLength: 6
+            RequireLowercase: False
+            RequireNumbers: False
+            RequireSymbols: False
+            RequireUppercase: False
+    blogUsersPoolClient:
+      Type: AWS::Cognito::UserPoolClient
+      Properties:
+        ClientName: BlogUsersClient
+        GenerateSecret: False
+        AllowedOAuthFlows:
+          - implicit
+        AllowedOAuthFlowsUserPoolClient: true
+        AllowedOAuthScopes:
+          - phone
+          - email
+          - openid
+          - profile
+          - aws.cognito.signin.user.admin
+        UserPoolId:
+          Ref: blogUsersPool
+        CallbackURLs:
+          - http://localhost:3000/signedin
+          - https://u3fnac9d51.execute-api.eu-west-1.amazonaws.com/dev/signedin
+        ExplicitAuthFlows:
+          - ALLOW_CUSTOM_AUTH
+          - ALLOW_USER_SRP_AUTH
+          - ALLOW_REFRESH_TOKEN_AUTH
+        SupportedIdentityProviders:
+          - COGNITO
+    blogUsersPoolDomain:
+      Type: AWS::Cognito::UserPoolDomain
+      Properties:
+        UserPoolId:
+          Ref: blogUsersPool
+        Domain: roboticists
+        
     blogPostsTable:
       Type: AWS::DynamoDB::Table
       Properties:
